update the image links to the hosted github repo

--- a/email-signature.html
+++ b/email-signature.html
@@ -12,7 +12,8 @@
         style="width: 550px; font-family: Poppins, sans-serif; color: #2B2147;">
         <tr aria-label="Signature Row">
             <td aria-label="Picture Column" width="125" style="vertical-align: top; padding: 10px; padding-left: 0px; ">
-                <img src="https://iili.io/3TLDrSj.jpg" alt="Nouvelle L. Gonzalo" width="125" height="180"
+                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/display-picture.jpg?raw=true"
+                    alt="Nouvelle L. Gonzalo" width="125" height="180"
                     style="display: block; border-radius: 12px; border: 1px solid #DCC3A1;">
             </td>
             <td aria-label="Text Column"
@@ -67,28 +68,32 @@
                                     <td aria-label="Location Item" style="white-space: nowrap; padding-right: 4px;">
                                         <a href="https://www.google.com/maps/place/Gonzalo+Law+Miami/@25.7612322,-80.1936558,17z/data=!3m2!4b1!5s0x88db8059298cca51:0x3baf46daaa122580!4m6!3m5!1s0x88d9b755508c5a73:0x7b86035a9f7e601c!8m2!3d25.7612274!4d-80.1910809!16s%2Fg%2F11rmq9hk5z?entry=ttu&g_ep=EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
+                                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/pin-icon.jpg?raw=true"
+                                                alt="Location" width="10" height="13"
                                                 style="vertical-align: middle; padding-right: 2px;"> Miami
                                         </a>
                                     </td>
                                     <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://www.google.com/maps/place/250+Park+Ave+%237th,+New+York,+NY+10017,+USA/@40.7551183,-73.9785697,17z/data=!3m1!4b1!4m6!3m5!1s0x89c258fdebddb677:0xa779d92ce5daaa58!8m2!3d40.7551143!4d-73.9759948!16s%2Fg%2F11lkj5k_4w?entry=ttu&g_ep=EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
+                                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/pin-icon.jpg?raw=true"
+                                                alt="Location" width="10" height="13"
                                                 style="vertical-align: middle; padding-right: 2px;"> New York
                                         </a>
                                     </td>
                                     <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://www.google.com/maps/place/Gonzalo+Law+-+Ohio/@41.5013866,-81.6911661,17.88z/data=!3m1!5s0x8830e157c586f7a5:0xf55a56096740a787!4m14!1m7!3m6!1s0x8830fa7f9502942b:0x5717885f83f1e3d6!2s600+Superior+Ave+E+%231300,+Cleveland,+OH+44114,+USA!3b1!8m2!3d41.5013147!4d-81.6897723!3m5!1s0x8830fa7f9426e30d:0xc306b3af3fa521e3!8m2!3d41.50138!4d-81.6895733!16s%2Fg%2F1tgkhycm?entry=ttu&g_ep=EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
+                                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/pin-icon.jpg?raw=true"
+                                                alt="Location" width="10" height="13"
                                                 style="vertical-align: middle; padding-right: 2px;"> Cleveland
                                         </a>
                                     </td>
                                     <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://www.google.com/maps/place/747+SW+2nd+Ave+%23190b,+Gainesville,+FL+32601,+USA/@29.6499443,-82.3356049,17z/data=!3m1!4b1!4m5!3m4!1s0x88e8a38fbec1e0e1:0xe54e967c4b78ca81!8m2!3d29.6499397!4d-82.33303?entry=ttu&g_ep=EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
+                                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/pin-icon.jpg?raw=true"
+                                                alt="Location" width="10" height="13"
                                                 style="vertical-align: middle; padding-right: 2px;"> Gainesville
                                         </a>
                                     </td>
@@ -106,8 +111,9 @@
                                             style="border-radius: 4px; margin-bottom: 4px;">
                                             <tr aria-label="Award Badge Item Row">
                                                 <td style="white-space: nowrap; padding-right: 4px;">
-                                                    <img src="https://iili.io/3TLDgcb.jpg" alt="Super Lawyers"
-                                                        width="14" height="14" style="vertical-align: middle;">
+                                                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/award-icon.jpg?raw=true"
+                                                        alt="Super Lawyers" width="14" height="14"
+                                                        style="vertical-align: middle;">
                                                     <span
                                                         style="font-size: 10px; color: #2B2147; padding-left: 4px;">Super
                                                         Lawyers Awardee</span>
@@ -117,8 +123,9 @@
                                         <table cellspacing="0" border="0" style="border-radius: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
-                                                    <img src="https://iili.io/3TLDgcb.jpg" alt="Super Lawyers"
-                                                        width="14" height="14" style="vertical-align: middle;">
+                                                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/award-icon.jpg?raw=true"
+                                                        alt="Super Lawyers" width="14" height="14"
+                                                        style="vertical-align: middle;">
                                                     <span
                                                         style="font-size: 10px; color: #2B2147; padding-left: 4px;">100
                                                         Most
@@ -135,8 +142,9 @@
                                                 <td style="white-space: nowrap;">
                                                     <a href="https://youtu.be/QkpH94lSvXs?si=2wxHwgm8LorSLLqm"
                                                         target="_blank" style="text-decoration: none; color: #2B2147;">
-                                                        <img src="https://iili.io/3TLDWcG.jpg" alt="Bloomberg"
-                                                            width="14" height="14" style="vertical-align: middle;">
+                                                        <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/play-icon.jpg?raw=true"
+                                                            alt="Bloomberg" width="14" height="14"
+                                                            style="vertical-align: middle;">
                                                         <span
                                                             style="font-size: 10px; color: #2B2147; padding-left: 4px;">As
                                                             seen on Bloomberg Business</span>
@@ -149,8 +157,9 @@
                                                 <td style="white-space: nowrap;">
                                                     <a href="https://www.instagram.com/reel/DFdlS0Vpza-/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                                                         target="_blank" style="text-decoration: none; color: #2B2147;">
-                                                        <img src="https://iili.io/3TLDWcG.jpg" alt="Bloomberg"
-                                                            width="14" height="14" style="vertical-align: middle;">
+                                                        <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/play-icon.jpg?raw=true"
+                                                            alt="Bloomberg" width="14" height="14"
+                                                            style="vertical-align: middle;">
                                                         <span
                                                             style="font-size: 10px; color: #2B2147; padding-left: 4px;">About
                                                             our Pro-Bono Law Program</span>
@@ -172,56 +181,56 @@
                         <td style="padding-bottom: 10px;">
                             <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view"
                                 target="_blank">
-                                <img src="https://iili.io/3TLDvV9.jpg" alt="Info" width="16" height="16"
-                                    style="display: block;">
+                                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/info-icon.jpg?raw=true"
+                                    alt="Info" width="16" height="16" style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 10px;">
                             <a href="https://gonzalolaw.com/" target="_blank">
-                                <img src="https://iili.io/3TLD8Pe.jpg" alt="Website" width="16" height="16"
-                                    style="display: block;">
+                                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/globe-icon.jpg?raw=true"
+                                    alt="Website" width="16" height="16" style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 10px;">
                             <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank">
-                                <img src="https://iili.io/3TLDOtS.jpg" alt="LinkedIn" width="16" height="16"
-                                    style="display: block;">
+                                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/linkedin-icon.jpg?raw=true"
+                                    alt="LinkedIn" width="16" height="16" style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 10px;">
                             <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank">
-                                <img src="https://iili.io/3TLDko7.jpg" alt="Instagram" width="16" height="16"
-                                    style="display: block;">
+                                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/insta-icon.jpg?raw=true"
+                                    alt="Instagram" width="16" height="16" style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 10px;">
                             <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation=1" target="_blank">
-                                <img src="https://iili.io/3TLDXSf.jpg" alt="YouTube" width="16" height="16"
-                                    style="display: block;">
+                                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/youtube-icon.jpg?raw=true"
+                                    alt="YouTube" width="16" height="16" style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 10px;">
                             <a href="tel:1-855-466-9256" target="_blank">
-                                <img src="https://iili.io/3TLDGPn.jpg" alt="Phone" width="16" height="16"
-                                    style="display: block;">
+                                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/phone-icon.jpg?raw=true"
+                                    alt="Phone" width="16" height="16" style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank">
-                                <img src="https://iili.io/3TLDUKu.jpg" alt="Email" width="16" height="16"
-                                    style="display: block;">
+                                <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/email-icon.jpg?raw=true"
+                                    alt="Email" width="16" height="16" style="display: block;">
                             </a>
                         </td>
                     </tr>
