--- a/email-signature.html
+++ b/email-signature.html
@@ -38,28 +38,28 @@
                         </td>
                     </tr>
                     <tr aria-label="Services Row">
-                        <td style=" font-weight: 400; font-size: 10px; color: #2B2147;">
-                            <table cellpadding="0" cellspacing="4px" border="0">
+                        <td style="padding-top: 4px; padding-bottom: 4px; font-size: 12px; color: #2B2147;">
+                            <table cellpadding="0" cellspacing="0" border="0">
                                 <tr style="">
-                                    <td style="white-space: nowrap; ">
-                                        <span
-                                            style="background-color: #f5f5f8; padding: 2px 6px; border-radius: 4px; display: inline-block;">International</span>
+                                    <td style="white-space: nowrap;">
+                                        <span style="padding-right: 4px;">International</span>
                                     </td>
-                                    <td style="white-space: nowrap; ">
-                                        <span
-                                            style="background-color: #f5f5f8; padding: 2px 6px; border-radius: 4px; display: inline-block;">Non-Profits</span>
+                                    <td style="padding: 0 4px; color: #2B2147;">|
                                     </td>
-                                    <td style="white-space: nowrap; ">
-                                        <span
-                                            style="background-color: #f5f5f8; padding: 2px 6px; border-radius: 4px; display: inline-block;">M&A</span>
+                                    <td style="white-space: nowrap;">
+                                        <span style="padding-left: 4px; padding-right: 4px;">Non-Profits</span>
                                     </td>
-                                    <td style="white-space: nowrap; ">
-                                        <span
-                                            style="background-color: #f5f5f8; padding: 2px 6px; border-radius: 4px; display: inline-block;">Contracts</span>
+                                    <td style="padding: 0 4px; color: #2B2147;">|</td>
+                                    <td style="white-space: nowrap;">
+                                        <span style="padding-left: 4px; padding-right: 4px;">M&A</span>
                                     </td>
-                                    <td style="white-space: nowrap; ">
-                                        <span
-                                            style="background-color: #f5f5f8; padding: 2px 6px; border-radius: 4px; display: inline-block;">IP</span>
+                                    <td style="padding: 0 4px; color: #2B2147;">|</td>
+                                    <td style="white-space: nowrap;">
+                                        <span style="padding-left: 4px; padding-right: 4px;">Contracts</span>
+                                    </td>
+                                    <td style="padding: 0 4px; color: #2B2147;">|</td>
+                                    <td style="white-space: nowrap;">
+                                        <span style="padding-left: 4px; padding-right: 4px;">IP</span>
                                     </td>
                                 </tr>
                             </table>
