reduced the line gap between awards

--- a/email-signature.html
+++ b/email-signature.html
@@ -112,7 +112,7 @@
                                     <!-- First Column: Award Badges -->
                                     <td aria-label="Award Badges Column" style="padding-right: 8px;">
                                         <table aria-label="Award Badges Table" cellspacing="0" border="0"
-                                            style="border-radius: 4px; margin-bottom: 4px;">
+                                            style="border-radius: 4px; margin-bottom: 0px;">
                                             <tr aria-label="Award Badge Item Row">
                                                 <td style="white-space: nowrap; padding-right: 4px;">
                                                     <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/award-icon.jpg?raw=true"
@@ -124,7 +124,8 @@
                                                 </td>
                                             </tr>
                                         </table>
-                                        <table cellspacing="0" border="0" style="border-radius: 4px;">
+                                        <table cellspacing="0" border="0"
+                                            style="border-radius: 4px; margin-bottom: 0px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
                                                     <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/award-icon.jpg?raw=true"
@@ -141,7 +142,7 @@
                                     <!-- Second Column: Play Icon Badges -->
                                     <td aria-label="Play Icon Badges Column">
                                         <table cellspacing="0" border="0"
-                                            style="border-radius: 4px; margin-bottom: 4px;">
+                                            style="border-radius: 4px; margin-bottom: 0px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
                                                     <a href="https://youtu.be/QkpH94lSvXs?si=2wxHwgm8LorSLLqm"
